--- a/app/src/main/res/layout/customwindow.xml
+++ b/app/src/main/res/layout/customwindow.xml
@@ -20,6 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sensor"
+            android:textSize="18sp"
             android:typeface="sans"
             android:textStyle="bold"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
@@ -44,11 +45,30 @@
                 android:textSize="14sp"
                 android:typeface="sans"/>
         </LinearLayout>
-    <LinearLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_below="@+id/lay2"
+            android:id="@+id/lay2_1"
+            android:weightSum="3">
+
+            <TextView
+                android:id="@+id/tel"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp"
+                android:layout_weight="2.7"
+                android:text="telephone"
+                android:textSize="14sp"
+                android:typeface="sans"/>
+        </LinearLayout>
+    <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/lay2_1"
             android:id="@+id/lay3">
             <TextView
                 android:layout_width="match_parent"
