--- a/app/src/main/res/drawable/toastbackground.xml
+++ b/app/src/main/res/drawable/toastbackground.xml
@@ -2,10 +2,10 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/quantum_bluegrey50"/>
+            <solid android:color="@color/quantum_grey700"/>
             <stroke android:color="@color/colorWhite" android:width="0.9dp" />
             <!--corners allow us to make the rounded corners button-->
-            <corners android:radius="12dp" />
+            <corners android:radius="10dp" />
 
         </shape>
     </item>
