--- a/app/src/main/res/layout/emergency_support.xml
+++ b/app/src/main/res/layout/emergency_support.xml
@@ -169,8 +169,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Send an emergency message to your emergency contact"
                         android:textAlignment="center"
+                        android:text="Send an emergency message to your emergency contact"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
                         android:textColor="@color/colorHomeSubTitle"
                         android:textSize="10sp" />
 
@@ -214,6 +217,9 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:textAlignment="center"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="5dp"
                         android:text="Call your emergency contact"
                         android:textColor="@color/colorHomeSubTitle"
                         android:textSize="10sp" />
@@ -255,8 +261,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:text="Share location address with your emergency contact"
                         android:textAlignment="center"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="Share location address with your emergency contact"
+
                         android:textColor="@color/colorHomeSubTitle"
                         android:textSize="10sp" />
 
@@ -276,6 +286,7 @@
                 android:layout_height="1dp"
                 android:layout_below="@+id/emergnecypart"
                 android:background="@color/colorLinearLayoutBorder" />
+
 
             <LinearLayout
                 android:id="@+id/navigations"
@@ -311,14 +322,19 @@
                         android:layout_height="40dp"
                         android:layout_gravity="center"
                         android:contentDescription="@string/app_name"
-                        android:src="@drawable/policeman" />
+                        android:src="@drawable/policeman"
+                        android:backgroundTint="@color/colorHomeBlockFour"/>
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
-                        android:text="Navigate To Station"
+                        android:id="@+id/polText"
+                        android:drawableRight="@drawable/ic_navigation"
+                        android:drawablePadding="5dp"
+                        android:drawableTint="@color/colorHomeBlockFour"
+                        android:text="Police Station"
                         android:textColor="@color/colorHomeBlockFour"
                         android:textSize="15sp" />
 
@@ -326,6 +342,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="5dp"
                         android:text="Navigate to the nearest police station"
                         android:textColor="@color/colorHomeSubTitle"
                         android:textSize="10sp" />
@@ -361,7 +380,10 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:layout_marginTop="10dp"
-                        android:text="Navigate to Shop"
+                        android:text="24 hours Open Shop"
+                        android:drawableRight="@drawable/ic_navigation"
+                        android:drawablePadding="5dp"
+                        android:drawableTint="@color/colorHomeBlockFour"
                         android:textColor="@color/colorHomeBlockFour"
                         android:textSize="15sp" />
 
@@ -369,6 +391,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginTop="5dp"
                         android:text="Navigate to the nearest 24 hrs open shop"
                         android:textColor="@color/colorHomeSubTitle"
                         android:textSize="10sp" />
@@ -382,6 +407,44 @@
 
             </LinearLayout>
 
+            <View
+                android:id="@+id/notification_divider3"
+                android:layout_width="fill_parent"
+                android:layout_height="1dp"
+                android:layout_below="@+id/navigations"
+                android:background="@color/colorLinearLayoutBorder" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/notification_divider3">
+                <View
+                    android:layout_width="5dp"
+                    android:layout_height="fill_parent"
+                    android:background="@color/colorHomeBlockFour" />
+                <Button
+                    android:id="@+id/info"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:background="@drawable/tooltips"
+                    android:backgroundTint="@color/colorButton"
+                    android:layout_marginVertical="4dp"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="4dp"
+                    android:text="Currently only available for Melbourne city area."
+                    android:textSize="12sp"
+                    android:layout_marginBottom="5dp"
+                    android:textColor="@color/colorButton"
+                    android:gravity="center"
+                    android:typeface="sans"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
 
         </RelativeLayout>
 
