--- a/app/src/main/res/layout/toast.xml
+++ b/app/src/main/res/layout/toast.xml
@@ -4,15 +4,16 @@
     android:layout_height="fill_parent"
     android:background="@drawable/toastbackground"
     android:orientation="horizontal"
-    android:padding="8dp" >
+    android:padding="5dp" >
 
     <TextView
         android:id="@+id/textToShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableLeft="@android:drawable/checkbox_on_background"
+        android:drawableLeft="@android:drawable/radiobutton_on_background"
+        android:drawablePadding="5dp"
         android:text="Selected"
-        android:textColor="@color/colorBlack"
-        android:textSize="19sp"/>
+        android:textColor="@color/colorWhite"
+        android:textSize="15sp"/>
 
 </LinearLayout>
