--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -35,7 +35,7 @@
     <color name="colorHomeSubTitle">#666</color>
     <color name="colorHomeBlockSix">#a4579d</color>
     <color name="colorHomeBlockSeven">#3988d0</color>
-    <color name="colorButton">#363c70</color>
+    <color name="colorButton">#363C70</color>
 
     <color name="colorLinearLayoutBorder">#f2f2f2</color>
 
@@ -58,6 +58,7 @@
     <color name="color4">#99D17B</color>
     <color name="color5">#DBB68F</color>
     <color name="emergnecycolor">#9a1649</color>
+    <color name="sensorcolor">#ee949d</color>
 
 
 </resources>
