--- a/app/src/main/res/layout/add_contact.xml
+++ b/app/src/main/res/layout/add_contact.xml
@@ -86,6 +86,7 @@
                 android:layout_gravity="center"
                 android:gravity="left"
                 android:hint="Phone Number"
+                android:inputType="number"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
         </android.support.v7.widget.CardView>
